# core-setup

./: .gitignore  .toolversions  BranchInfo.props  BuildToolsVersion.txt  Directory.Build.props  Directory.Build.targets  DotnetCLIVersion.txt  ISSUE_TEMPLATE.md  Microsoft.DotNet.CoreSetup.sln  NuGet.Config  NuGet.config  README.md  Subsets.props  TestProjects.targets  azure-pipelines.yml  branchinfo.txt  build.cmd  build.proj  build.sh  clean.sh  config.json  dependencies.props  dependencyversions.props  dir.props  dir.targets  dir.traversal.targets  global.json  init-tools.cmd  init-tools.sh  init.sh  netci.groovy  run.ps1  run.sh  sign.proj  signingvalidation.proj  sync.sh  visual-studio-devenv.cmd
Documentation/: dummy.txt
Documentation/building/: Running-Tests-In-VisualStudio-IDE.md  local-coreclr-corefx.md
Documentation/design-docs/: COM-activation.md  DotNetCore-SharedPackageStore.md  IJW-activation.md  WinRT-activation.md  framework-version-resolution-implementation.md  framework-version-resolution.md  host-component-dependencies-resolution.md  host-components.md  host-error-codes.md  host-startup-hook.md  host-testing.md  host-tracing.md  hosting-layer-apis.md  multilevel-sharedfx-lookup.md  native-hosting-assembly-load.md  native-hosting.md  roll-forward-on-no-candidate-fx.md
Documentation/misc/: .NET Core Shared Framework composition - A & D team ownership.md
Documentation/project-docs/: how-to-track-changes.md
build_projects/Microsoft.DotNet.Cli.Build.Framework/: Constants.cs  project.json
build_projects/dotnet-host-build/: CompileTargets.cs  DebTargets.cs  MsiTargets.cs  PackageTargets.cs  PkgTargets.cs  PrepareTargets.cs  PublishTargets.cs  TestTargets.cs  build.ps1  build.sh  project.json  sign.proj
build_projects/shared-build-targets-utils/: DependencyVersions.cs  project.json
build_projects/signing/: sign.proj
build_projects/update-dependencies/: Config.cs  Program.cs  UpdateFilesTargets.cs  project.json  update-dependencies.ps1
buildpipeline/: Core-Setup-CentOS-x64.json  Core-Setup-CrossBuild.json  Core-Setup-Debian8-x64.json  Core-Setup-Debian9-x64.json  Core-Setup-Fedora23-x64-master.json  Core-Setup-Fedora23-x64.json  Core-Setup-Fedora24-x64.json  Core-Setup-Fedora27-x64.json  Core-Setup-Fedora28-x64.json  Core-Setup-FreeBSD-BT.json  Core-Setup-Linux-Arm-BT.json  Core-Setup-Linux-BT.json  Core-Setup-Linux.json  Core-Setup-OSX-BT.json  Core-Setup-OSX-x64.json  Core-Setup-OpenSuse13.2-x64.json  Core-Setup-OpenSuse42.1-x64.json  Core-Setup-OpenSuse42.3-x64.json  Core-Setup-PortableLinux-x64-BT.json  Core-Setup-PortableLinux-x64-master.json  Core-Setup-PortableLinux-x64.json  Core-Setup-Publish.json  Core-Setup-RHEL7-x64-master.json  Core-Setup-RHEL7-x64.json  Core-Setup-Sign-And-Publish.json  Core-Setup-Signing-Validation.json  Core-Setup-Signing-Windows-BT.json  Core-Setup-Signing-Windows-x64-BT.json  Core-Setup-Signing-Windows-x64.json  Core-Setup-Signing-Windows-x86.json  Core-Setup-Ubuntu14.04-x64.json  Core-Setup-Ubuntu16.04-x64.json  Core-Setup-Ubuntu16.10-x64.json  Core-Setup-Ubuntu18.04-x64.json  Core-Setup-Windows-Arm-BT.json  Core-Setup-Windows-BT.json  Core-Setup-Windows-arm32-master.json  Core-Setup-Windows-arm32.json  Core-Setup-Windows-arm64-master.json  Core-Setup-Windows-arm64.json  (+5 more)
cross/: build-android-rootfs.sh
cross/arm/: toolchain.cmake
cross/armel/: tizen-fetch.sh
eng/: Build.props  ShowNoProjectToBuildError.proj  Signing.props  Tools.props  Version.Details.xml  Versions.props  configure-toolset.ps1  configure-toolset.sh
packaging/: dir.proj  dir.props
pkg/: BuildToolsVersion.txt  SyncToolsVersion.txt  dir.proj  dir.props  dir.targets  init-tools.cmd  init-tools.sh  pack.cmd  pack.sh  packages.builds  publish.proj  stable.packages.props  syncAzure.proj
publish/: Directory.Build.targets  dir.props  dir.targets  prepare-artifacts.proj  publish-final.proj  publish-type.proj  publish.proj
resources/: README.md
scripts/: arm32_ci_script.sh  cleanup-docker.sh  dockerbuild.sh  dockerrun.sh  init-docker.sh
signing/: baseline.props  sign.proj  validation.targets
src/: Directory.Build.props  Directory.Build.targets  dir.proj  dir.props  settings.cmake  src.builds
src/corehost/cli/comhost/: CMakeLists.txt  clsidmap.cpp  comhost.cpp  comhost.h  exports.cpp
src/corehost/cli/ijwhost/: CMakeLists.txt  Exports.def  IJWBootstrapThunkCPU.h  corhdr.h  executableheap.cpp  executableheap.h  exports.cpp  ijwhost.cpp  ijwhost.h  ijwthunk.cpp  pedecoder.cpp  pedecoder.h
src/corehost/cli/ijwhost/AMD64/: IJWBootstrapThunkCPU.cpp  asmhelpers.asm  asmmacros.inc  bootstrap_thunk.cpp  bootstrap_thunk.h
src/corehost/cli/ijwhost/arm/: IJWBootstrapThunkCPU.cpp  asmhelpers.asm  kxarm.h
src/corehost/cli/ijwhost/arm64/: IJWBootstrapThunkCPU.cpp  asmhelpers.asm  bootstrap_thunk.cpp  bootstrap_thunk.h  kxarm64.h
src/corehost/cli/ijwhost/i386/: IJWBootstrapThunkCPU.cpp  asmhelpers.asm  bootstrap_thunk.cpp  bootstrap_thunk.h
src/corehost/cli/nethost/: CMakeLists.txt  nethost.cpp  nethost.h
src/corehost/cli/test/nativehost/: CMakeLists.txt  comhost_test.cpp  error_writer_redirector.h  host_context_test.cpp  host_context_test.h  nativehost.cmake  nativehost.cpp  resolve_component_dependencies_test.cpp
src/corehost/cli/test/nativehost/common/: CMakeLists.txt
src/corehost/cli/test/nativehost/exe/: CMakeLists.txt
src/corehost/cli/test/nativehost/singlefile/: CMakeLists.txt  singlefile.cpp
src/uwp/: CMakeLists.txt  build.cmd  build.proj
src/uwp/CopyWin32Resources/: CMakeLists.txt  CopyWin32Resources.cpp
src/uwp/Host/UWPHost/: CMakeLists.txt  HostEnvironment.cpp
src/uwp/Host/UWPShim/: CMakeLists.txt
src/uwp/Microsoft.Build.Net.CoreRuntimeTask/: Microsoft.Build.Net.CoreRuntimeTask.csproj  ResourceHandlingTask.cs  WireUpCoreRuntime.cs
src/uwp/Windows/: gen-buildsys-win.bat
tasks/: ChangeEntryPointLibraryName.cs  GetBuildableFrameworks.cs  core-setup.tasks.csproj  core-setup.tasks.sln
test/: dir.proj  dir.props
tools-local/: Directory.Build.props  Directory.Build.targets
tools-override/: Roslyn.Common.props
(+805 files in other folders)
